--- a/style.css
+++ b/style.css
@@ -26,3 +26,23 @@ body {
 em strong {
     color: #FF0000;
 }    
+
+.itens {
+    font-style: italic
+}
+
+.beneficios {
+    background: #FFFFFF;
+    pading: 20px;
+}
+
+ul {
+    display: inline-block;
+    vertical-aling: top;
+    width: 20%;
+    margin-right: 15%;
+}
+
+.imagembeneficios {
+    width: 50%;
+}
